--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "builds": [
       {
         "src": "vercel_app/wsgi.py",
-        "use": "@vercel/python"
+        "use": "@vercel/python3"
       }
     ],
     "routes": [
